--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/squreicon"
+        android:icon="@drawable/squreicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/roundicon"
+        android:roundIcon="@drawable/roundicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.Resiexpresschamp"
         tools:targetApi="31">
@@ -18,10 +18,7 @@
         <activity
             android:name=".signup"
             android:exported="false" />
-        <activity
-            android:name=".ui.login.signup"
-            android:exported="false"
-            android:label="@string/title_activity_signup" />
+
         <activity
             android:name=".onboarding3"
             android:exported="false" />
